# qualia-codegen-core

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
docs/: conf.py  index.rst
src/libqualia-neuralnetwork/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h
src/libqualia-neuralnetwork/Metrics/: Accuracy.h  MeanAbsoluteError.h  MeanAbsolutePercentageError.h  MeanSquaredError.h  PearsonCorrelationCoefficient.h  Slope.h
src/qualia_codegen_core/: Allocator.py  Converter.py  DataConverter.py  MetricsConverter.py  Quantizer.py  Validator.py  __init__.py  main.py  typing.py
src/qualia_codegen_core/assets/: .editorconfig  dump_featuremaps.cc  metrics.cppp  model.cc
src/qualia_codegen_core/assets/include/: defines.hh  metrics.hh  model.hh  number.hh
src/qualia_codegen_core/assets/layers/: activation.cc  add.cc  averagepool1d.cc  averagepool2d.cc  batchnorm1d.cc  batchnorm2d.cc  concatenate.cc  conv1d.cc  conv2d.cc  fc.cc  flatten.cc  maxpool1d.cc  maxpool2d.cc  permute.cc  samplenorm.cc  slice.cc  sum.cc  upsample.cc
src/qualia_codegen_core/examples/Linux/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  single.cpp
src/qualia_codegen_core/examples/LonganNano/: .cproject  .gitignore  .project
src/qualia_codegen_core/examples/NucleoH7S3L8/: CMakeLists.txt  NucleoH7S3L8.ioc
src/qualia_codegen_core/examples/NucleoH7S3L8/Boot/Core/Inc/: stm32h7rsxx_hal_conf.h  stm32h7rsxx_it.h
src/qualia_codegen_core/examples/NucleoH7S3L8/Boot/Core/Src/: main.c  stm32h7rsxx_hal_msp.c  stm32h7rsxx_it.c
src/qualia_codegen_core/examples/NucleoH7S3L8/Makefile/: Makefile
src/qualia_codegen_core/examples/NucleoH7S3L8/Makefile/Boot/: Makefile  stm32h7s3xx_flash.ld  stm32h7s3xx_sram.ld
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/: CMakeLists.txt  NucleoH7S3L8ExtFlash.ioc
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Appli/Core/Src/: main.c  stm32h7rsxx_hal_msp.c
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Boot/Core/Inc/: stm32_extmem_conf.h  stm32h7rsxx_hal_conf.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Boot/Core/Src/: main.c  stm32h7rsxx_hal_msp.c
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/ExtMemLoader/Core/Inc/: extmemloader_init.h  stm32_extmemloader_conf.h  stm32h7rsxx_hal_conf.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/ExtMemLoader/Core/Src/: extmem_manager.c  extmemloader_init.c  stm32h7rsxx_hal_msp.c
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Makefile/: Makefile
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Makefile/Appli/: Makefile  stm32h7rsxx_RAMxspi1_ROMxspi2.ld  stm32h7rsxx_ROMxspi1.ld  stm32h7rsxx_ROMxspi1_RAMxspi2.ld  stm32h7rsxx_ROMxspi2.ld  stm32h7s3xx_sram.ld
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Makefile/Boot/: Makefile  stm32h7s3xx_flash.ld.bak
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Makefile/ExtMemLoader/: Makefile  make
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Loader/: license_information.txt
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Loader/MDK-ARM/: FlashDev.c  FlashOS.h  FlashPrg.c
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Loader/STM32Cube/: stm32_device_info.c  stm32_device_info.h  stm32_loader_api.c  stm32_loader_api.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Loader/core/: memory_wrapper.c  memory_wrapper.h  systick_management.c
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Manager/: stm32_extmem.c  stm32_extmem.h  stm32_extmem_type.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Manager/boot/: stm32_boot_xip.c  stm32_boot_xip.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Manager/nor_sfdp/: stm32_sfdp_data.c  stm32_sfdp_data.h  stm32_sfdp_driver.c  stm32_sfdp_driver_api.h  stm32_sfdp_driver_type.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Manager/psram/: stm32_psram_driver.c  stm32_psram_driver_api.h  stm32_psram_driver_type.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Manager/sal/: stm32_sal_sd.c  stm32_sal_sd_api.h  stm32_sal_sd_type.h  stm32_sal_xspi.c  stm32_sal_xspi_api.h  stm32_sal_xspi_type.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Manager/sdcard/: stm32_sdcard_driver.c  stm32_sdcard_driver_api.h  stm32_sdcard_driver_type.h
src/qualia_codegen_core/examples/NucleoH7S3L8ExtFlash/Middlewares/ST/STM32_ExtMem_Manager/user/: stm32_user_driver.c  stm32_user_driver_api.h  stm32_user_driver_type.h
src/qualia_codegen_core/examples/NucleoL452REP/: .gitignore  CMakeLists.txt  NucleoL452REP.ioc  STM32L452RETxP_FLASH.ld
src/qualia_codegen_core/examples/NucleoL452REP/Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
src/qualia_codegen_core/examples/NucleoL452REP/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
src/qualia_codegen_core/examples/NucleoU575ZIQ/: CMakeLists.txt  Makefile  NucleoU575ZIQ.ioc
src/qualia_codegen_core/examples/Qualia-CodeGen-NucleoL452REP/: .cproject  .gitignore  .mxproject  .project  Qualia-CodeGen-NucleoL452REP.ioc  STM32L452RETXP_FLASH.ld  STM32L452RETXP_RAM.ld  mx.scratch
src/qualia_codegen_core/examples/Qualia-CodeGen-NucleoL476RG/: .cproject  .mxproject  .project  Qualia-CodeGen-NucleoL476RG.ioc
src/qualia_codegen_core/examples/Qualia-CodeGen-NucleoU575ZIQ/: .cproject  .mxproject  .project  mx.scratch  (+2 more)
src/qualia_codegen_core/examples/libqualia-neuralnetwork/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h
src/qualia_codegen_core/examples/libqualia-neuralnetwork/Metrics/: Accuracy.h  MeanSquaredError.h  Metric.h  PearsonCorrelationCoefficient.h
src/qualia_codegen_core/graph/: ActivationRange.py  ActivationsRange.py  KerasModelGraph.py  LayerNode.py  ModelGraph.py  Quantization.py  RoundMode.py  TorchModelGraph.py  __init__.py
(+100 files in other folders)
